Fix dark mode globally, reduce text color intensity

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color-scheme: dark;
+  color: rgba(212, 212, 212, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -30,6 +30,10 @@ body {
   min-height: 100vh;
 }
 
+select {
+  color: rgba(212, 212, 212, 0.87);
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -45,6 +49,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: rgba(212, 212, 212, 0.87);
 }
 button:hover {
   border-color: #646cff;
@@ -54,15 +59,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.recharts-wrapper *:focus {
+  outline: none !important;
 }
